--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         
         <title>Rafsan J. Arnob</title>
-        <link href="images/arnob.ico" rel="shortcut icon" />
+        <link href="images/favicon.ico" rel="shortcut icon" />
         <link rel="stylesheet" href="assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
