--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         
-        <title>Rafsan J. Arnob</title>
+        <title>Rafsan J. Arnob - Connect With Me!</title>
         <link href="images/favicon.ico" rel="shortcut icon" />
         <link rel="stylesheet" href="assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
