--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+         <!-- LINK PARSER -->
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Rafsan J. Arnob">
+        <meta property="og:title" content="Rafsan J. Arnob - Connect With Me!">
+        <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
+        <meta property="og:url" content="https://rafsanarnob.github.io/index.html">
+        <meta property="og:locale" content="en_US">
+        <meta property="og:image" content="https://rafsanarnob.github.io/images/preview.png">
+        
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
     </head>
