--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <footer id="footer">
                 <ul class="copyright">
                     <li>&copy; Rafsan J. Arnob</li>
-                    <li>Design by <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>Design by HTML5 UP</li>
                 </ul>
             </footer>
         </div>
