--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                 </header>
                 <footer>
                     <ul class="icons">
-                        <li><a href="mailto:rjarnob@gmail.com" class="icon" target="_blank"><i class="fa-solid fa-square-envelope"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/rafsan-arnob/" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="https://discord.gg/V2g2S7592J" class="icon" target="_blank"><i class="fa-brands fa-discord fa-sm"></i></i></a></li>
+                        <li><a href="mailto:rjarnob@gmail.com" class="icon" target="_blank"><i class="fa-solid fa-square-envelope"></i></a></li>
                         <li id="expand" class="visible"><a href="javascript:void(0)" class="icon" onclick="expandable()"><i class="fa-solid fa-square-plus"></i></a></li>
                         <li id="expanded" class="invisible"><a href="javascript:void(0)" class="icon active" onclick="expandable()"><i class="fa-solid fa-square-minus"></i></a></li>
                         <span id="expandable" class="invisible">
                             <li><a href="https://t.me/r_arnob" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
                             <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                            <li><a href="https://discord.gg/V2g2S7592J" class="icon" target="_blank"><i class="fa-brands fa-discord fa-sm"></i></i></a></li>
                         </span>
                     </ul>
                 </footer>
             </section>
             <footer id="footer">
                 <ul class="copyright">
-                    <li>&copy; Rafsan J. Arnob</li>
-                    <li>Design by HTML5 UP</li>
+                    <li>&copy; 2025 Rafsan J. Arnob</li>
+                    <li>All Right Reserved</a></li>
                 </ul>
             </footer>
         </div>
