--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li id="expand" class="visible"><a href="javascript:void(0)" class="icon" onclick="expandable()"><i class="fa-solid fa-square-plus"></i></a></li>
                         <li id="expanded" class="invisible"><a href="javascript:void(0)" class="icon active" onclick="expandable()"><i class="fa-solid fa-square-minus"></i></a></li>
                         <span id="expandable" class="invisible">
-                            <li><a href="https://t.me/r_arnob" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
+                            <li><a href="https://t.me/ficus_krishnae" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
                             <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                             <li><a href="https://discord.gg/V2g2S7592J" class="icon" target="_blank"><i class="fa-brands fa-discord fa-sm"></i></i></a></li>
                         </span>
