--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </section>
             <footer id="footer">
                 <ul class="copyright">
-                    <li>&copy; 2025 Rafsan J. Arnob</li>
+                    <li>&copy; Rafsan J. Arnob</li>
                     <li>All Right Reserved</a></li>
                 </ul>
             </footer>
