--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </section>
             <footer id="footer">
                 <ul class="copyright">
-                    <li>&copy; Rafsan J. Arnob</li>
-                    <li>All Right Reserved</a></li>
+                            <li>&copy; Rafsan J. Arnob</li>
+                            <li>Design by HTML5 UP</a></li>
                 </ul>
             </footer>
         </div>
