--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
          <!-- LINK PARSER -->
-        <meta property="og:type" content="website">
-        <meta property="og:site_name" content="Rafsan J. Arnob">
-        <meta property="og:title" content="Rafsan J. Arnob - Connect With Me!">
-        <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
-        <meta property="og:url" content="https://rafsanarnob.github.io/index.html">
-        <meta property="og:locale" content="en_US">
-        <meta property="og:image" content="https://rafsanarnob.github.io/images/preview.png">
-        
+         <meta property="og:type" content="website">
+         <meta property="og:site_name" content="Rafsan J. Arnob">
+         <meta property="og:title" content="Rafsan J. Arnob - Connect With Me!">
+         <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
+         <meta property="og:url" content="https://rafsanarnob.github.io/index.html">
+         <meta property="og:locale" content="en_US">
+         <meta property="og:image" content="https://rafsanarnob.github.io/images/preview.png">
+ 
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
     </head>
@@ -24,7 +24,7 @@
             <section id="main">
                 <header>
                     <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-                    <h1>Rafsan J. Arnob</h1>
+                    <h1>Rafsan J. Arnob </h1>
                     <p>WebDev Enthusiast</p>
                 </header>
                 <footer>
@@ -35,17 +35,17 @@
                         <li id="expand" class="visible"><a href="javascript:void(0)" class="icon" onclick="expandable()"><i class="fa-solid fa-square-plus"></i></a></li>
                         <li id="expanded" class="invisible"><a href="javascript:void(0)" class="icon active" onclick="expandable()"><i class="fa-solid fa-square-minus"></i></a></li>
                         <span id="expandable" class="invisible">
-                            <li><a href="https://t.me/ficus_krishnae" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
-                            <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://t.me/ficus_krishnae" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
+                        <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                         </span>
                     </ul>
+                    <button onclick="window.location.href='aboutme.html'">About Me</button>
                 </footer>
             </section>
             <footer id="footer">
                 <ul class="copyright">
-                            <li>&copy; Rafsan J. Arnob</li>
-                            <li>Design by HTML5 UP</a></li>
-                </ul>
+                    <li>&copy; Rafsan J. Arnob</li>
+                    <li>Design by HTML5 UP</a></li>
             </footer>
         </div>
         <script>
