--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
         
         <title>Rafsan J. Arnob - Connect With Me!</title>
         <link href="images/favicon.ico" rel="shortcut icon" />
-        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="../assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
          <!-- LINK PARSER -->
@@ -39,7 +39,7 @@
                         <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                         </span>
                     </ul>
-                    <button onclick="window.location.href='aboutme.html'">About Me</button>
+                    <button onclick="window.location.href='aboutme/aboutme.html'">About Me</button>
                 </footer>
             </section>
             <footer id="footer">
