--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li id="expand" class="visible"><a href="javascript:void(0)" class="icon" onclick="expandable()"><i class="fa-solid fa-square-plus"></i></a></li>
                         <li id="expanded" class="invisible"><a href="javascript:void(0)" class="icon active" onclick="expandable()"><i class="fa-solid fa-square-minus"></i></a></li>
                         <span id="expandable" class="invisible">
-                        <li><a href="https://t.me/blackmalee" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
+                        <li><a href="https://www.reddit.com/user/Broad-King2738/" class="icon" target="_blank"><i class="fa-brands fa-square-reddit"></i></a></li>
                         <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                         </span>
                     </ul>
