--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <ul class="icons">
                         <li><a href="https://www.linkedin.com/in/rafsan-arnob/" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
                         <li><a href="mailto:rjarnob@gmail.com" class="icon" target="_blank"><i class="fa-solid fa-square-envelope"></i></a></li>
-                        <li><a href="https://t.me/blackmalee" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
+                        <li><a href="https://t.me/r_arnob" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
                         <li id="expand" class="visible"><a href="javascript:void(0)" class="icon" onclick="expandable()"><i class="fa-solid fa-square-plus"></i></a></li>
                         <li id="expanded" class="invisible"><a href="javascript:void(0)" class="icon active" onclick="expandable()"><i class="fa-solid fa-square-minus"></i></a></li>
                         <span id="expandable" class="invisible">
@@ -71,3 +71,4 @@
         </script>
     </body>
 </html>
+
