Updated OG tags for Vercel and added button animations

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <link rel="stylesheet" href="assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-         <!-- LINK PARSER -->
          <meta property="og:type" content="website">
          <meta property="og:site_name" content="Rafsan J. Arnob">
          <meta property="og:title" content="Rafsan J. Arnob - Connect With Me!">
          <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
-         <meta property="og:url" content="https://rafsanarnob.github.io/index.html">
+         <meta property="og:url" content="https://arnob.vercel.app/">
          <meta property="og:locale" content="en_US">
-         <meta property="og:image" content="https://rafsanarnob.github.io/images/preview.png">
+         <meta property="og:image" content="https://arnob.vercel.app/images/preview.png">
  
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
@@ -29,23 +28,24 @@
                 </header>
                 <footer>
                     <ul class="icons">
-                        <li><a href="https://www.linkedin.com/in/rafsan-arnob/" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="mailto:rjarnob@gmail.com" class="icon" target="_blank"><i class="fa-solid fa-square-envelope"></i></a></li>
                         <li><a href="https://t.me/r_arnob" class="icon" target="_blank"><i class="fa-brands fa-telegram"></i></a></li>
+                        <li><a href="mailto:rjarnob@gmail.com" class="icon" target="_blank"><i class="fa-solid fa-square-envelope"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/rafsan-arnob/" class="icon" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
                         <li id="expand" class="visible"><a href="javascript:void(0)" class="icon" onclick="expandable()"><i class="fa-solid fa-square-plus"></i></a></li>
                         <li id="expanded" class="invisible"><a href="javascript:void(0)" class="icon active" onclick="expandable()"><i class="fa-solid fa-square-minus"></i></a></li>
                         <span id="expandable" class="invisible">
-                        <li><a href="https://www.reddit.com/user/Broad-King2738/" class="icon" target="_blank"><i class="fa-brands fa-square-reddit"></i></a></li>
+                        <li><a href="https://www.instagram.com/rafsanjaniarnob/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="https://github.com/rafsanarnob" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                         </span>
                     </ul>
-                    <button onclick="window.location.href='aboutme.html'">About Me</button>
+                    <button onclick="window.location.href='aboutme'">About Me</button>
                 </footer>
             </section>
             <footer id="footer">
                 <ul class="copyright">
                     <li>&copy; Rafsan J. Arnob</li>
                     <li>Design by HTML5 UP</a></li>
+                </ul>
             </footer>
         </div>
         <script>
@@ -71,4 +71,3 @@
         </script>
     </body>
 </html>
-
