fix: correct resume link and update site assets

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,15 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" xintegrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
-        <!-- NEW: Open Graph Tags for Vercel -->
+        <!-- Open Graph Tags for Vercel -->
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Rafsan J. Arnob">
         <meta property="og:title" content="About Rafsan J. Arnob">
         <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
         <!-- IMPORTANT: Replace the placeholder URL with your actual Vercel URL -->
-        <meta property="og:url" content="https://arnob.vercel.app/aboutme/">
+        <meta property="og:url" content="https://your-vercel-url.com/aboutme/">
         <meta property="og:locale" content="en_US">
-        <meta property="og:image" content="https://arnob.vercel.app/images/preview.png">
+        <meta property="og:image" content="https://your-vercel-url.com/images/preview.png">
 
         <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 
@@ -46,7 +46,8 @@
                 </div>
 
                 <footer>
-                    <a href="/assets/your-resume.pdf" download="Rafsan_Arnob_Resume.pdf">
+                    <!-- UPDATED: Corrected the path to your resume -->
+                    <a href="/assets/resume.pdf" download="Rafsan_Arnob_Resume.pdf">
                         <button type="button">Download Resume</button>
                     </a>
                     <button onclick="window.location.href='/'">Back</button>
