feat: add custom OG image and finalize site

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -13,9 +13,10 @@
         <meta property="og:site_name" content="Rafsan J. Arnob">
         <meta property="og:title" content="About Rafsan J. Arnob">
         <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
-        <!-- IMPORTANT: Replace the placeholder URL with your actual Vercel URL -->
+        <!-- IMPORTANT: Replace with your Vercel URL -->
         <meta property="og:url" content="https://your-vercel-url.com/aboutme/">
         <meta property="og:locale" content="en_US">
+        <!-- UPDATED: Path to your new preview image -->
         <meta property="og:image" content="https://your-vercel-url.com/images/preview.png">
 
         <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
@@ -46,7 +47,6 @@
                 </div>
 
                 <footer>
-                    <!-- UPDATED: Corrected the path to your resume -->
                     <a href="/assets/resume.pdf" download="Rafsan_Arnob_Resume.pdf">
                         <button type="button">Download Resume</button>
                     </a>
@@ -56,7 +56,7 @@
             <footer id="footer">
                 <ul class="copyright">
                     <li>&copy; Rafsan J. Arnob</li>
-                    <li>Design by HTML5 UP</a></li>
+                    <li>Live On <a href="https://vercel.com" target="_blank" rel="noopener noreferrer">Vercel</a></li>
                 </ul>
             </footer>
         </div>
