--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
          <meta property="og:title" content="Rafsan J. Arnob - Connect With Me!">
          <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
          <!-- IMPORTANT: Replace with your Vercel URL -->
-         <meta property="og:url" content="https://your-vercel-url.com/">
+         <meta property="og:url" content="https://arnob.vercel.app/">
          <meta property="og:locale" content="en_US">
-         <meta property="og:image" content="https://your-vercel-url.com/images/preview.png">
+         <!-- UPDATED: Path to your new preview image -->
+         <meta property="og:image" content="https://arnob.vercel.app/images/preview.png">
  
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
@@ -46,7 +47,6 @@
             <footer id="footer">
                 <ul class="copyright">
                     <li>&copy; Rafsan J. Arnob</li>
-                    <!-- UPDATED: This line is now changed -->
                     <li>Live On <a href="https://vercel.com" target="_blank" rel="noopener noreferrer">Vercel</a></li>
                 </ul>
             </footer>
