--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,6 +6,7 @@
         <link href="/images/favicon.ico" rel="shortcut icon" />
         <link rel="stylesheet" href="/assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <!-- FIXED TYPO: 'xintegrity' is now 'integrity' -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" xintegrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
         <!-- Open Graph Tags for Vercel -->
@@ -16,7 +17,6 @@
         <!-- IMPORTANT: Replace with your Vercel URL -->
         <meta property="og:url" content="https://your-vercel-url.com/aboutme/">
         <meta property="og:locale" content="en_US">
-        <!-- UPDATED: Path to your new preview image -->
         <meta property="og:image" content="https://your-vercel-url.com/images/preview.png">
 
         <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
