fix: correct button speacing on responsive

--- a/skills/index.html
+++ b/skills/index.html
@@ -34,7 +34,6 @@
                 text-transform: none;
                 letter-spacing: 0.075em;
             }
-            /* UPDATED: Increased space above the footer/button for better symmetry */
             #main footer {
                 margin-top: 3.5em;
             }
@@ -67,16 +66,14 @@
                         <li>Bootstrap</li>
                         <li>Laravel</li>
                         <li>Vue.js</li>
-                        <!-- UPDATED: Added Next.js -->
                         <li>Next.js</li>
                     </ul>
 
                 </div>
 
                 <footer>
-                    <ul class="actions special">
-                        <li><button onclick="window.location.href='/'">Back to Home</button></li>
-                    </ul>
+                    <!-- UPDATED: Removed the ul.actions wrapper for consistency -->
+                    <button onclick="window.location.href='/'">Back to Home</button>
                 </footer>
             </section>
             <footer id="footer">
