modify the skills page

--- a/skills/index.html
+++ b/skills/index.html
@@ -6,6 +6,7 @@
         <link href="/images/favicon.ico" rel="shortcut icon" />
         <link rel="stylesheet" href="/assets/css/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <!-- FIXED TYPO: 'xintegrity' is now 'integrity' -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" xintegrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
         <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
@@ -72,7 +73,6 @@
                 </div>
 
                 <footer>
-                    <!-- UPDATED: Removed the ul.actions wrapper for consistency -->
                     <button onclick="window.location.href='/'">Back to Home</button>
                 </footer>
             </section>
