add the bg animation and text clear

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <meta property="og:type" content="website">
          <meta property="og:site_name" content="Rafsan J. Arnob">
          <meta property="og:title" content="Rafsan J. Arnob - Connect With Me!">
-         <meta property="og:description" content="WebDev Enthusiast, Tech Nerd, Pancosmic Loner.">
+         <meta property="og:description" content="WebDev Enthusiast, Tech Nerd.">
          <!-- IMPORTANT: Replace with your Vercel URL -->
          <meta property="og:url" content="https://arnob.vercel.app/">
          <meta property="og:locale" content="en_US">
